force-app/main/default/objects/SpareLineItem__c/SpareLineItem__c.object-meta.xml
<CustomObject>
    <label>Spare Products</label>
    <nameField>
        <label>Spare Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Spare Products</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>