force-app/main/default/objects/SpareLineItem__c/fields/Dept__c.field-meta.xml
<CustomField>
    <fullName>Dept__c</fullName>
    <label>Dept</label>
    <length>80</length>
    <type>Text</type>
</CustomField>