force-app/main/default/objects/SpareLineItem__c/fields/MC_Name__c.field-meta.xml
<CustomField>
    <fullName>MC_Name__c</fullName>
    <label>MC Name</label>
    <length>72</length>
    <type>Text</type>
</CustomField>