force-app/main/default/objects/SpareLineItem__c/fields/RS_EA__c.field-meta.xml
<CustomField>
    <fullName>RS_EA__c</fullName>
    <label>RS/EA</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>