force-app/main/default/objects/SpareLineItem__c/fields/RS_SET__c.field-meta.xml
<CustomField>
    <fullName>RS_SET__c</fullName>
    <label>RS/SET</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>