force-app/main/default/objects/SpareLineItem__c/fields/RS_SET_Price__c.field-meta.xml
<CustomField>
    <fullName>RS_SET_Price__c</fullName>
    <formula>Std_Qty__c * RS_EA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RS/SET Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>