force-app/main/default/objects/SpareLineItem__c/fields/Spare_Description_of_Material__c.field-meta.xml
<CustomField>
    <fullName>Spare_Description_of_Material__c</fullName>
    <label>Spare Description of Material</label>
    <length>255</length>
    <type>Text</type>
</CustomField>