force-app/main/default/objects/SpareLineItem__c/fields/Units__c.field-meta.xml
<CustomField>
    <fullName>Units__c</fullName>
    <label>Quantity</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>