force-app/main/default/objects/SpareLineItem__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>Work_Order_for_Spares__c</referenceTo>
    <relationshipLabel>Spare Products</relationshipLabel>
    <relationshipName>Spare_Products</relationshipName>
    <type>Lookup</type>
</CustomField>