force-app/main/default/objects/SpareLineItem__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MC_Name__c</columns>
    <columns>Product_Code__c</columns>
    <columns>Size__c</columns>
    <columns>Spare_Description_of_Material__c</columns>
    <columns>RS_EA__c</columns>
    <columns>Cases__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>Diagram__c</columns>
    <columns>Final_Price__c</columns>
    <columns>Price__c</columns>
    <columns>Product_Name__c</columns>
    <columns>Units__c</columns>
    <columns>Required_On_or_Before__c</columns>
    <columns>RS_SET__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>