force-app/main/default/objects/SpareLineItem__c/listViews/Spare_Product_View.listView-meta.xml
<ListView>
    <fullName>Spare_Product_View</fullName>
    <columns>NAME</columns>
    <columns>Work_Order__c</columns>
    <filterScope>Mine</filterScope>
    <label>Spare Product View</label>
</ListView>